--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,6 +24,6 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-store = "2.4.1"
 tauri-plugin-log = "2.7.1"
-keyring = "3"
+keyring = { version = "3", features = ["apple-native"] }
 reqwest = { version = "0.12.24", features = ["json"] }
 
